--- a/OpenMinesweeper.NET/AboutWindow.xaml
+++ b/OpenMinesweeper.NET/AboutWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="OpenMinesweeper.NET.AboutWindow"
+﻿<fw:AcrylicWindow x:Class="OpenMinesweeper.NET.AboutWindow"
+        xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,25 +8,48 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
+        Icon="pack://application:,,,/OpenMinesweeper.NET;component/Resources/OpenMineSweeper.png"
         DataContext="{Binding AboutVM, Source={StaticResource Locator}}"
         Title="About" Height="400" Width="400">
     <DockPanel LastChildFill="True">
         <StackPanel DockPanel.Dock="Top">
             <TextBlock Text="{Binding ProductDetails}" HorizontalAlignment="Center" />
-            <!--<Image Source="/Resources/OpenMineSweeper.png" Width="60" Height="60" />-->
+            <Image Source="pack://application:,,,/OpenMinesweeper.NET;component/Resources/OpenMineSweeper.png" Width="60" Height="60" />
         </StackPanel>
-        <TabControl DockPanel.Dock="Bottom">
-            <TabItem Header="Authors">
+        <TabControl DockPanel.Dock="Bottom" Background="{DynamicResource SystemBaseLowColorBrush}">
+            <TabControl.Resources>
+                <Style TargetType="{x:Type TabItem}">
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource SystemAltHighColorBrush}" />
+                            <Setter Property="Background" Value="{DynamicResource SystemBaseLowColorBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="False">
+                            <Setter Property="Foreground" Value="{DynamicResource SystemBaseHighColorBrush}" />
+                            <Setter Property="Background" Value="{DynamicResource SystemAltHighColorBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource SystemAltHighColorBrush}" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </TabControl.Resources>
+            
+            <TabItem Header="Authors" >
                 <StackPanel>
-                    <RichTextBox VerticalScrollBarVisibility="Auto">
+                    <RichTextBox VerticalScrollBarVisibility="Auto" 
+                                 Foreground="{DynamicResource SystemBaseHighColorBrush}"
+                                 Background="{DynamicResource SystemBaseLowColorBrush}">
                         <FlowDocument>
                             <Paragraph>Felipe Bellini (Felipe.Bellini@outlook.com), 2020</Paragraph>
                         </FlowDocument>
                     </RichTextBox>
                 </StackPanel>
             </TabItem>
-            <TabItem Header="License">
-                <RichTextBox VerticalScrollBarVisibility="Auto">
+            <TabItem Header="License">                            
+                <RichTextBox VerticalScrollBarVisibility="Auto"
+                             Foreground="{DynamicResource SystemBaseHighColorBrush}"
+                             Background="{DynamicResource SystemBaseLowColorBrush}">
                     <FlowDocument>
                         <Paragraph>
                             MIT License
@@ -59,4 +83,4 @@
             </TabItem>
         </TabControl>        
     </DockPanel>
-</Window>
+</fw:AcrylicWindow>
