--- a/OpenMinesweeper.NET/App.xaml
+++ b/OpenMinesweeper.NET/App.xaml
@@ -3,8 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:OpenMinesweeper.NET"
              xmlns:vm="clr-namespace:OpenMinesweeper.NET.ViewModel"
+             xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
-        <vm:ViewModelLocator x:Key="Locator"/>
+    <Application.Resources>        
+        <ResourceDictionary>
+            <vm:ViewModelLocator x:Key="Locator"/>
+            
+            <ResourceDictionary.MergedDictionaries>                
+                <!--  FluentWPF Controls  -->
+                <ResourceDictionary Source="pack://application:,,,/FluentWPF;component/Styles/Controls.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
