--- a/OpenMinesweeper.NET/NewGameWindow.xaml
+++ b/OpenMinesweeper.NET/NewGameWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="OpenMinesweeper.NET.NewGameWindow"
+﻿<fw:AcrylicWindow x:Class="OpenMinesweeper.NET.NewGameWindow"
+        xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,10 +8,11 @@
         mc:Ignorable="d"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
+        Icon="pack://application:,,,/OpenMinesweeper.NET;component/Resources/OpenMineSweeper.png"
         DataContext="{Binding NewGameVM, Source={StaticResource Locator}}"
-        Title="New Game" Height="100" Width="150">
+        Title="New Game" Height="120" Width="150">
     <DockPanel Margin="2" LastChildFill="True">
-        <Button DockPanel.Dock="Bottom" Content="PLAY" Command="{Binding PlayGame}" />
+        <Button DockPanel.Dock="Bottom" Content="PLAY" Command="{Binding PlayGame}" Style="{StaticResource ButtonRevealStyle}"/>
 
         <Grid>
             <Grid.ColumnDefinitions>
@@ -21,12 +23,12 @@
 
             <StackPanel>
                 <TextBlock Text="Lines" HorizontalAlignment="Center" />
-                <TextBox Text="{Binding LineCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox Text="{Binding LineCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Center" Style="{StaticResource TextBoxRevealStyle}"/>
             </StackPanel>
             <StackPanel Grid.Column="2">
                 <TextBlock Text="Columns" HorizontalAlignment="Center" />
-                <TextBox Text="{Binding ColumnCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox Text="{Binding ColumnCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Center" Style="{StaticResource TextBoxRevealStyle}" />
             </StackPanel>
         </Grid>
     </DockPanel>   
-</Window>
+</fw:AcrylicWindow>
