--- a/OpenMinesweeper.NET/View/GameGridControl.xaml
+++ b/OpenMinesweeper.NET/View/GameGridControl.xaml
@@ -31,7 +31,7 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Grid>
-                        <Border MinHeight="20" MinWidth="20">
+                        <Border Margin="1" MinHeight="20" MinWidth="20">
                             <Border.Style>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="Background" Value="Transparent"/>
@@ -80,9 +80,9 @@
                                     </Style.Triggers>
                                 </Style>
                             </StackPanel.Style>
-                            <Image Source="pack://application:,,,/OpenMinesweeper.NET;component/Resources/OpenMineSweeper.png"                                        
-                                       MaxHeight="15" 
-                                       MaxWidth="15">
+                            <Image Source="pack://application:,,,/OpenMinesweeper.NET;component/Resources/Mine.png"                                        
+                                       MaxHeight="18" 
+                                       MaxWidth="18">
                                 <Image.Style>
                                     <Style TargetType="{x:Type Image}">
                                         <Setter Property="Visibility" Value="Hidden" />
