--- a/OpenMinesweeper.NET/MainWindow.xaml
+++ b/OpenMinesweeper.NET/MainWindow.xaml
@@ -15,15 +15,25 @@
         Icon="pack://application:,,,/OpenMinesweeper.NET;component/Resources/Mine.png">
     <DockPanel>
         <Menu DockPanel.Dock="Top" Style="{StaticResource AcrylicMenuStyle}">
-            <MenuItem Header="_Game">
-                <MenuItem x:Name="NewGameMenuItem" Header="_New" Click="NewGameMenuItem_Click" />
-                <MenuItem x:Name="LoadMenuItem" Header="_Open" Click="LoadMenuItem_Click" />
-                <MenuItem x:Name="SaveMenuItem" Header="_Save" Click="SaveMenuItem_Click" />
+            <MenuItem Header="{Binding LanguageContent[GameStr]}">
+                <MenuItem x:Name="NewGameMenuItem" Header="{Binding LanguageContent[NewGameStr]}" Click="NewGameMenuItem_Click" />
+                <MenuItem x:Name="LoadMenuItem" Header="{Binding LanguageContent[OpenStr]}" Click="LoadMenuItem_Click" />
+                <MenuItem x:Name="SaveMenuItem" Header="{Binding LanguageContent[SaveStr]}" Click="SaveMenuItem_Click" />
                 <Separator />
-                <MenuItem x:Name="ExitMenuItem" Header="_Exit" Click="ExitMenuItem_Click"  />
+                <MenuItem x:Name="ExitMenuItem" Header="{Binding LanguageContent[ExitStr]}" Click="ExitMenuItem_Click"  />
             </MenuItem>
-            <MenuItem Header="_Help">
-                <MenuItem x:Name="AboutMenuItem" Header="_About" Click="AboutMenuItem_Click" />
+            <MenuItem Header="{Binding LanguageContent[HelpStr]}">
+                <MenuItem Header="{Binding LanguageContent[LanguagesStr]}" ItemsSource="{Binding Languages}">
+                    <MenuItem.ItemContainerStyle>
+                        <Style>
+                            <Setter Property="MenuItem.Header" Value="{Binding LanguageName}"/>
+                            <Setter Property="MenuItem.Command" Value="{Binding MainVM.ChangeLanguage, Source={StaticResource Locator}}"/>
+                            <Setter Property="MenuItem.CommandParameter" Value="{Binding}"/>
+                        </Style>
+                    </MenuItem.ItemContainerStyle>
+                </MenuItem>
+                <Separator />
+                <MenuItem x:Name="AboutMenuItem" Header="{Binding MainVM.LanguageContent[AboutStr], Source={StaticResource Locator}}" Click="AboutMenuItem_Click" />
             </MenuItem>
         </Menu>
 
